{
    "name": "TouchControls",
    "maps": [
        {
            "name": "TouchMap",
            "id": "8ff91b3d-7ba9-4f99-b654-7766ebb0b1e6",
            "actions": [
                {
                    "name": "TouchPress",
                    "type": "Button",
                    "id": "9f30f4e1-de20-46e8-921a-520277366706",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                },
                {
                    "name": "TouchPosition",
                    "type": "PassThrough",
                    "id": "47951bb8-1fc5-49ab-a05e-e699c60f7fb0",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "c23019ee-4497-4a3f-8137-718b57e37b77",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f22ced40-580f-4bf2-8451-33599f071eb2",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}